# kasse

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css
.github/workflows/: deploy.yml
src/: config.rs  currency.rs  format.rs  lib.rs  payment.rs  state.rs
src/components/: confirmation.rs  invoice.rs  keypad.rs  mod.rs  setup.rs
